# asteroids

./: .clang-format  CMakeLists.txt  readme.md  run_clang_format.sh
src/: .main.cpp.swp  CMakeLists.txt  asteroid.cpp  asteroid.h  asteroid_graphic.cpp  asteroid_graphic.h  asteroids.icns  buffer_object.cpp  buffer_object.h  bullet.cpp  bullet.h  bullet_graphic.cpp  bullet_graphic.h  drawable.cpp  drawable.h  engine.cpp  engine.h  generic_shader.cpp  generic_shader.h  geometry_helpers.cpp  geometry_helpers.h  glfw_app.cpp  glfw_app.h  key_callback.h  key_timer.cpp  key_timer.h  life_counter.cpp  life_counter.h  listener_list.h  logger.cpp  logger.h  main.cpp  mover.h  particle_system.cpp  particle_system.h  program.cpp  program.h  sampler.cpp  sampler.h  score_counter.cpp  (+32 more)
